--- a/typescript/chatbot/package.json
+++ b/typescript/chatbot/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@rungalileo/galileo": "^1.3.0",
     "dotenv": "^16.4.7",
-    "galileo": "file:../galileo-1.4.0.tgz",
+    "galileo": "^1.2.0",
+    "galileo-experimental": "^1.5.3",
     "openai": "^4.86.2"
   },
   "devDependencies": {
